# nightingale

./: .gitignore  README.md  pyproject.toml  test_condensed.py  test_verify_right.py
nightingale/: __init__.py  cli.py  engine.py  prompts.py  server.py
nightingale/static/: index.html
